Light mode was good, dark mode needs fixing

--- a/_sass/minimal-light.scss
+++ b/_sass/minimal-light.scss
@@ -38,11 +38,11 @@ papertitle {
 @media (prefers-color-scheme: dark) {
     body {
         background-color: #20212b;
-        color: #dadbdf;
+        color: #e1e1e1;
     }
 
     autocolor{
-      color:#dadbdf;
+      color:#e1e1e1;
     }
 
     lightonly {
@@ -101,39 +101,35 @@ papertitle {
       width: 8.00em;
     }
 
-h1, h3, h4, h5, h6 {
+/* frenchroyalblue #004700 darkblue #043361 LMU green #009440 */
+
+h1, h2, h3, h4, h5, h6 {
   font-weight: 600;
-  /* frenchroyalblue #004700 darkblue #043361 LMU green #009440 */
   color: #2C2C2C;   
   margin:0 0 20px;
 }
 
-h2 {
-  color:#2C2C2C; 
-  margin:20px 0px 10px;
-  font-size: 24px; 
-}
-
-@media (prefers-color-scheme: dark) {
-  h1, h3, h4, h5, h6 {
-    color:#dadbdf; 
-  }
-
-  h2 {
-    color:#dadbdf;
-  }
-}
-
-p, ul, ol, table, pre, dl {
-  margin:0 0 20px;
+h1 {
+  font-size:28px;
 }
 
 h1, h2, h3 {
   line-height:1.1;
 }
 
-h1 {
-  font-size:28px;
+h2 {
+  margin:20px 0px 10px;
+  font-size: 24px; 
+}
+
+@media (prefers-color-scheme: dark) {
+  h1, h2, h3, h4, h5, h6 {
+    color:#e1e1e1; 
+  }
+}
+
+p, ul, ol, table, pre, dl {
+  margin:0 0 20px;
 }
 
 
